--- a/src/scss/components/userinfo.scss
+++ b/src/scss/components/userinfo.scss
@@ -11,4 +11,23 @@ main.user-info{
             border-radius: 50%;
         }
     }
+    section.recent-reviews{
+        .review{
+            display: flex;
+            flex-direction: column;
+            margin: globals.$margin 0;
+            .img-and-name-container{
+                display: flex;
+                align-items: center;
+            }
+            img{
+                border-radius: 50%;
+                
+            }
+    
+            p{
+                width: 80%;
+            }
+        }
+    }
 }
