--- a/src/scss/components/userinfo.scss
+++ b/src/scss/components/userinfo.scss
@@ -1,6 +1,11 @@
 @use '../globals';
 main.user-info{
     width: 100%;
+    padding: 0 globals.$margin;
+    .books{
+        display: flex;
+        gap: globals.$margin;
+    }
     section.username-and-avatar{
         display: flex;
         flex-direction: column;
@@ -31,14 +36,48 @@ main.user-info{
         }
     }
     section.favourite-books{
+        
+        .book-container a:hover ~ .remove-book {
+            display: block;
+        
+        }
+        .book-basic-details {
+            margin-right: 0;
+          }
+        .book-container{
+            position: relative;
+        }
+        .remove-book {
+            width: globals.$margin;
+            height: globals.$margin;
+            background-color: globals.$white;
+            border-radius: 50%;
+            position: absolute;
+            left: auto;
+            right: -5px;
+            top: -5px;
+            border: 4px solid globals.$black;
+            box-sizing: content-box;
+            display: none;
+            text-align: center;
+            .presentation {
+                width: calc(globals.$margin - 5px);
+                height: 5px;
+                background-color: globals.$black;
+                border-radius: globals.$border-radius-full;
+                margin: 0 auto;
+                margin-top: calc(50% - 2.5px);
+            }
+        }
     }
     dialog.add-fav-book{
-        height: fit-content;
-        display: flex;
-        flex-direction: column;
-        gap: globals.$margin;
-        align-items: center;
-
+        .info-container{
+            height: fit-content;
+            display: flex;
+            flex-direction: column;
+            gap: globals.$margin;
+            align-items: center;
+        }
         .book-selection{
             display: flex;
             flex-direction: column;
