new uploads section in homepage

--- a/src/scss/components/newsfeed.scss
+++ b/src/scss/components/newsfeed.scss
@@ -41,4 +41,7 @@ main.home{
     section.continue-reading{
         grid-column-start: 2;
     }
+    section.new-uploads{
+        grid-column-start: 2;
+    }
 }
