upload page final styling

--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -1,15 +1,14 @@
 @use '../globals';
 .navbar{
     display: flex;
-    
     height: 3.75rem;
     justify-content: space-between;
-    
     align-items: center;
     width: 100%;
     padding: 0 globals.$margin;
     color: globals.$black;
     background-color: globals.$black;
+    border-bottom: 1px solid globals.$gray;
     position: fixed;
     z-index: 44;
     h1{
