--- a/src/scss/globals/colors.scss
+++ b/src/scss/globals/colors.scss
@@ -1,4 +1,4 @@
-$primary-color: rgb(255, 214, 117);
+$primary-color: #ffd675;
 $light-primary-color: rgba(255, 213, 115, 0.408);
 $secondary-color: rgb(128, 232, 151);
 
