--- a/src/scss/components/upload.scss
+++ b/src/scss/components/upload.scss
@@ -25,7 +25,7 @@ main.upload{
             align-items: center;
         }
         label{
-            justify-content: center;
+            justify-content: space-between;
             color: globals.$light-white;
             img{
                 width: globals.$margin-small;
