--- a/src/scss/components/threads.scss
+++ b/src/scss/components/threads.scss
@@ -2,7 +2,7 @@
 main.thread-page{
     display: flex;
     width: 100%;
-    height: calc(100vh - globals.$margin-big);
+    height: calc(100vh - globals.$margin-big - globals.$margin);
     gap: globals.$margin;
     padding: 0 globals.$margin;
     aside{
@@ -56,6 +56,14 @@ main.thread-page{
         height: 100%;
         width: 100%;
         padding-bottom: globals.$margin-small;
+        header{
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid globals.$gray;
+            padding: 5px 0;
+        }
         .messages-container{
             width: 100%;
             height: 100%;
