--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -62,6 +62,11 @@
         img{
             border-radius: 50%;
         }
+        img.sign-off{
+            margin-left: globals.$margin-small;
+            width: 40px;
+            height: 40px;
+        }
         span{
             color: globals.$secondary-color;
         }
