--- a/src/scss/components/newsfeed.scss
+++ b/src/scss/components/newsfeed.scss
@@ -2,10 +2,14 @@
 main.home{
     padding: 0 globals.$margin;
     width: 100%;
-    height: 100%;
     display: grid;
     grid-template-columns: 25% auto;
     gap: globals.$margin-big;
+    section.no-books{
+        position: absolute;
+        grid-column-start: 2;
+    }
+
     h2{
         margin-bottom: globals.$margin-small;
     }
